# quotonic-public

./: CONTRIBUTING.rst  LICENSE  Makefile  README.md  build.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: aa.md  clements.md  fock.md  index.md  modules.md
quotonic/: aa.c  aa.pyx  clements.py  fock.c  fock.pyx  utilities.py
tests/: test_foo.py
